Ticket refactor