@@ -3,26 +3,25 @@ package com.example.identitymanager.controller;
 import com.example.identitymanager.dto.SupportTicketDTO;
 import com.example.identitymanager.model.SupportTicket;
 import com.example.identitymanager.service.SupportTicketService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.context.annotation.Import;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.security.test.context.support.WithAnonymousUser;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
-import org.mockito.Mockito;
-import org.springframework.boot.test.mock.mockito.MockBean;
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Collections;
 
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(SupportTicketController.class)
-@Import(com.example.identitymanager.config.SecurityConfig.class)
 class SupportTicketControllerSecurityTest {
 
     @Autowired
@@ -34,60 +33,68 @@ class SupportTicketControllerSecurityTest {
     @MockBean
     private com.example.identitymanager.service.CustomUserDetailsService customUserDetailsService;
 
-    @MockBean
-    private org.springframework.security.crypto.password.PasswordEncoder passwordEncoder;
+    private SupportTicketDTO testTicketDTO;
 
-    @Test
-    @WithMockUser(username = "john@example.com", roles = {"USER"})
-    void shouldGetAllTicketsWhenAuthenticated() throws Exception {
-        // Given - FIXED: 7 parameters (id, subject, description, status, userId, userEmail, createdAt)
-        SupportTicketDTO ticket = new SupportTicketDTO(
+    @BeforeEach
+    void setUp() {
+        testTicketDTO = new SupportTicketDTO(
                 1L,
-                "Test Subject",
+                "Test Issue",
                 "Test Description",
                 "OPEN",
                 2L,
                 "john@example.com",
                 LocalDateTime.now()
         );
+    }
 
-        when(ticketService.getAllTickets()).thenReturn(List.of(ticket));
+    // ==================== GET /api/tickets TESTS ====================
+
+    @Test
+    @WithMockUser(username = "john@example.com", roles = {"USER"})
+    void shouldGetTicketsWhenAuthenticatedAsUser() throws Exception {
+        // Given - USER gets only their own tickets
+        when(ticketService.getTicketsByUserEmail("john@example.com"))
+                .thenReturn(Collections.singletonList(testTicketDTO));
 
         // When & Then
         mockMvc.perform(get("/api/tickets"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$[0].subject").value("Test Subject"));
+                .andExpect(jsonPath("$[0].subject").value("Test Issue"));
+    }
+
+    @Test
+    @WithMockUser(username = "admin@example.com", roles = {"ADMIN"})
+    void shouldGetAllTicketsWhenAuthenticatedAsAdmin() throws Exception {
+        // Given - ADMIN gets all tickets
+        when(ticketService.getAllTickets())
+                .thenReturn(Collections.singletonList(testTicketDTO));
+
+        // When & Then
+        mockMvc.perform(get("/api/tickets"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].subject").value("Test Issue"));
     }
 
     @Test
     @WithAnonymousUser
-    void shouldReturn401WhenNotAuthenticatedForGetTickets() throws Exception {
+    void shouldReturn401WhenNotAuthenticated() throws Exception {
         // When & Then
         mockMvc.perform(get("/api/tickets"))
                 .andExpect(status().isUnauthorized());
     }
 
+    // ==================== POST /api/tickets TESTS ====================
+
     @Test
     @WithMockUser(username = "john@example.com", roles = {"USER"})
     void shouldCreateTicketWhenAuthenticated() throws Exception {
-        // Given - FIXED: 7 parameters
-        SupportTicketDTO createdTicket = new SupportTicketDTO(
-                10L,
-                "New Issue",
-                "Description",
-                "OPEN",
-                2L,
-                "john@example.com",
-                LocalDateTime.now()
-        );
-
-        when(ticketService.createTicket(anyLong(), anyString(), anyString()))
-                .thenReturn(createdTicket);
+        // Given - User creates ticket for themselves (no userId in request)
+        when(ticketService.createTicketForCurrentUser(eq("john@example.com"), anyString(), anyString()))
+                .thenReturn(testTicketDTO);
 
         String requestBody = """
                 {
-                    "userId": 2,
                     "subject": "New Issue",
                     "description": "Description"
                 }
@@ -95,10 +102,11 @@ class SupportTicketControllerSecurityTest {
 
         // When & Then
         mockMvc.perform(post("/api/tickets")
+                        .with(csrf())
                         .contentType("application/json")
                         .content(requestBody))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.subject").value("New Issue"));
+                .andExpect(jsonPath("$.subject").value("Test Issue"));
     }
 
     @Test
@@ -107,7 +115,6 @@ class SupportTicketControllerSecurityTest {
         // Given
         String requestBody = """
                 {
-                    "userId": 2,
                     "subject": "New Issue",
                     "description": "Description"
                 }
@@ -115,15 +122,18 @@ class SupportTicketControllerSecurityTest {
 
         // When & Then
         mockMvc.perform(post("/api/tickets")
+                        .with(csrf())
                         .contentType("application/json")
                         .content(requestBody))
                 .andExpect(status().isUnauthorized());
     }
 
+    // ==================== PATCH /api/tickets/{id}/status TESTS ====================
+
     @Test
     @WithMockUser(username = "admin@example.com", roles = {"ADMIN"})
     void shouldUpdateTicketStatusWhenAuthenticatedAsAdmin() throws Exception {
-        // Given - FIXED: 7 parameters
+        // Given
         SupportTicketDTO updatedTicket = new SupportTicketDTO(
                 1L,
                 "Test",
@@ -145,9 +155,28 @@ class SupportTicketControllerSecurityTest {
 
         // When & Then
         mockMvc.perform(patch("/api/tickets/1/status")
+                        .with(csrf())
                         .contentType("application/json")
                         .content(requestBody))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.status").value("RESOLVED"));
+    }
+
+    @Test
+    @WithMockUser(username = "john@example.com", roles = {"USER"})
+    void shouldReturn403WhenUserTriesToUpdateStatus() throws Exception {
+        // Given
+        String requestBody = """
+                {
+                    "status": "RESOLVED"
+                }
+                """;
+
+        // When & Then
+        mockMvc.perform(patch("/api/tickets/1/status")
+                        .with(csrf())
+                        .contentType("application/json")
+                        .content(requestBody))
+                .andExpect(status().isForbidden());
     }
 }
